# api/swagger.yml
@@ -340,6 +340,25 @@ paths:
           description: PublicHTTPError, type `PUSH_TOKEN_ALREADY_EXISTS`
           schema:
             $ref: '#/definitions/publicHttpError'
+  /api/v1/stamp:
+    post:
+      security:
+      - Bearer: []
+      description: Add a stamp to a domain
+      tags:
+      - stamp
+      summary: Stamp a domain
+      operationId: PostStampRoute
+      parameters:
+      - name: Payload
+        in: body
+        schema:
+          $ref: '#/definitions/postStampPayload'
+      responses:
+        "200":
+          description: PostStampResponse
+          schema:
+            $ref: '#/definitions/postStampResponse'
   /swagger.yml:
     get:
       description: |-
@@ -758,6 +777,49 @@ definitions:
         maxLength: 255
         minLength: 1
         example: user@example.com
+  postStampPayload:
+    type: object
+    required:
+    - domainId
+    - stampId
+    - approved
+    properties:
+      approved:
+        description: If the vote agrees with the stamp
+        type: boolean
+      domainId:
+        description: ID of the domain
+        type: string
+        format: uuid4
+      rating:
+        description: Optional rating, only possible if the vote agrees
+        type: integer
+        maximum: 9
+        minimum: 0
+        x-nullable: true
+      stampId:
+        description: ID of the stamp
+        type: string
+        format: uuid4
+  postStampResponse:
+    type: object
+    required:
+    - domainId
+    - stampId
+    - votes
+    properties:
+      domainId:
+        description: ID of the domain
+        type: string
+        format: uuid4
+      stampId:
+        description: ID of the stamp
+        type: string
+        format: uuid4
+      votes:
+        type: array
+        items:
+          $ref: '#/definitions/vote'
   postUpdatePushTokenPayload:
     type: object
     required:
@@ -821,6 +883,25 @@ definitions:
         type: array
         items:
           $ref: '#/definitions/httpValidationErrorDetail'
+  vote:
+    type: object
+    required:
+    - approved
+    - domainStampId
+    properties:
+      approved:
+        description: If the vote agrees with the stamp
+        type: boolean
+      domainStampId:
+        description: The id of the relation domain stamp
+        type: string
+        format: uuid4
+      rating:
+        description: Optional rating, only possible if the vote agrees
+        type: integer
+        maximum: 9
+        minimum: 0
+        x-nullable: true
 responses:
   AuthForbiddenResponse:
     description: PublicHTTPError, type `USER_DEACTIVATED`/`NOT_LOCAL_USER`
