# internal/models/votes.go
@@ -24,13 +24,13 @@ import (
 
 // Vote is an object representing the database table.
 type Vote struct {
-	ID            string    `boil:"id" json:"id" toml:"id" yaml:"id"`
-	DomainStampID string    `boil:"domain_stamp_id" json:"domain_stamp_id" toml:"domain_stamp_id" yaml:"domain_stamp_id"`
-	UserID        string    `boil:"user_id" json:"user_id" toml:"user_id" yaml:"user_id"`
-	Approved      bool      `boil:"approved" json:"approved" toml:"approved" yaml:"approved"`
-	Rating        null.Int  `boil:"rating" json:"rating,omitempty" toml:"rating" yaml:"rating,omitempty"`
-	CreatedAt     time.Time `boil:"created_at" json:"created_at" toml:"created_at" yaml:"created_at"`
-	UpdatedAt     time.Time `boil:"updated_at" json:"updated_at" toml:"updated_at" yaml:"updated_at"`
+	ID            string     `boil:"id" json:"id" toml:"id" yaml:"id"`
+	DomainStampID string     `boil:"domain_stamp_id" json:"domain_stamp_id" toml:"domain_stamp_id" yaml:"domain_stamp_id"`
+	UserID        string     `boil:"user_id" json:"user_id" toml:"user_id" yaml:"user_id"`
+	Approved      bool       `boil:"approved" json:"approved" toml:"approved" yaml:"approved"`
+	Rating        null.Int64 `boil:"rating" json:"rating,omitempty" toml:"rating" yaml:"rating,omitempty"`
+	CreatedAt     time.Time  `boil:"created_at" json:"created_at" toml:"created_at" yaml:"created_at"`
+	UpdatedAt     time.Time  `boil:"updated_at" json:"updated_at" toml:"updated_at" yaml:"updated_at"`
 
 	R *voteR `boil:"-" json:"-" toml:"-" yaml:"-"`
 	L voteL  `boil:"-" json:"-" toml:"-" yaml:"-"`
@@ -74,26 +74,26 @@ var VoteTableColumns = struct {
 
 // Generated where
 
-type whereHelpernull_Int struct{ field string }
+type whereHelpernull_Int64 struct{ field string }
 
-func (w whereHelpernull_Int) EQ(x null.Int) qm.QueryMod {
+func (w whereHelpernull_Int64) EQ(x null.Int64) qm.QueryMod {
 	return qmhelper.WhereNullEQ(w.field, false, x)
 }
-func (w whereHelpernull_Int) NEQ(x null.Int) qm.QueryMod {
+func (w whereHelpernull_Int64) NEQ(x null.Int64) qm.QueryMod {
 	return qmhelper.WhereNullEQ(w.field, true, x)
 }
-func (w whereHelpernull_Int) IsNull() qm.QueryMod    { return qmhelper.WhereIsNull(w.field) }
-func (w whereHelpernull_Int) IsNotNull() qm.QueryMod { return qmhelper.WhereIsNotNull(w.field) }
-func (w whereHelpernull_Int) LT(x null.Int) qm.QueryMod {
+func (w whereHelpernull_Int64) IsNull() qm.QueryMod    { return qmhelper.WhereIsNull(w.field) }
+func (w whereHelpernull_Int64) IsNotNull() qm.QueryMod { return qmhelper.WhereIsNotNull(w.field) }
+func (w whereHelpernull_Int64) LT(x null.Int64) qm.QueryMod {
 	return qmhelper.Where(w.field, qmhelper.LT, x)
 }
-func (w whereHelpernull_Int) LTE(x null.Int) qm.QueryMod {
+func (w whereHelpernull_Int64) LTE(x null.Int64) qm.QueryMod {
 	return qmhelper.Where(w.field, qmhelper.LTE, x)
 }
-func (w whereHelpernull_Int) GT(x null.Int) qm.QueryMod {
+func (w whereHelpernull_Int64) GT(x null.Int64) qm.QueryMod {
 	return qmhelper.Where(w.field, qmhelper.GT, x)
 }
-func (w whereHelpernull_Int) GTE(x null.Int) qm.QueryMod {
+func (w whereHelpernull_Int64) GTE(x null.Int64) qm.QueryMod {
 	return qmhelper.Where(w.field, qmhelper.GTE, x)
 }
 
@@ -102,7 +102,7 @@ var VoteWhere = struct {
 	DomainStampID whereHelperstring
 	UserID        whereHelperstring
 	Approved      whereHelperbool
-	Rating        whereHelpernull_Int
+	Rating        whereHelpernull_Int64
 	CreatedAt     whereHelpertime_Time
 	UpdatedAt     whereHelpertime_Time
 }{
@@ -110,7 +110,7 @@ var VoteWhere = struct {
 	DomainStampID: whereHelperstring{field: "\"votes\".\"domain_stamp_id\""},
 	UserID:        whereHelperstring{field: "\"votes\".\"user_id\""},
 	Approved:      whereHelperbool{field: "\"votes\".\"approved\""},
-	Rating:        whereHelpernull_Int{field: "\"votes\".\"rating\""},
+	Rating:        whereHelpernull_Int64{field: "\"votes\".\"rating\""},
 	CreatedAt:     whereHelpertime_Time{field: "\"votes\".\"created_at\""},
 	UpdatedAt:     whereHelpertime_Time{field: "\"votes\".\"updated_at\""},
 }
