# internal/types/post_stamp_response.go
@@ -1,0 +1,163 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package types
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+	"strconv"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// PostStampResponse post stamp response
+//
+// swagger:model postStampResponse
+type PostStampResponse struct {
+
+	// ID of the domain
+	// Required: true
+	// Format: uuid4
+	DomainID *strfmt.UUID4 `json:"domainId"`
+
+	// ID of the stamp
+	// Required: true
+	// Format: uuid4
+	StampID *strfmt.UUID4 `json:"stampId"`
+
+	// votes
+	// Required: true
+	Votes []*Vote `json:"votes"`
+}
+
+// Validate validates this post stamp response
+func (m *PostStampResponse) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateDomainID(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateStampID(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateVotes(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *PostStampResponse) validateDomainID(formats strfmt.Registry) error {
+
+	if err := validate.Required("domainId", "body", m.DomainID); err != nil {
+		return err
+	}
+
+	if err := validate.FormatOf("domainId", "body", "uuid4", m.DomainID.String(), formats); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *PostStampResponse) validateStampID(formats strfmt.Registry) error {
+
+	if err := validate.Required("stampId", "body", m.StampID); err != nil {
+		return err
+	}
+
+	if err := validate.FormatOf("stampId", "body", "uuid4", m.StampID.String(), formats); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *PostStampResponse) validateVotes(formats strfmt.Registry) error {
+
+	if err := validate.Required("votes", "body", m.Votes); err != nil {
+		return err
+	}
+
+	for i := 0; i < len(m.Votes); i++ {
+		if swag.IsZero(m.Votes[i]) { // not required
+			continue
+		}
+
+		if m.Votes[i] != nil {
+			if err := m.Votes[i].Validate(formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("votes" + "." + strconv.Itoa(i))
+				} else if ce, ok := err.(*errors.CompositeError); ok {
+					return ce.ValidateName("votes" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
+	}
+
+	return nil
+}
+
+// ContextValidate validate this post stamp response based on the context it is used
+func (m *PostStampResponse) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.contextValidateVotes(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *PostStampResponse) contextValidateVotes(ctx context.Context, formats strfmt.Registry) error {
+
+	for i := 0; i < len(m.Votes); i++ {
+
+		if m.Votes[i] != nil {
+			if err := m.Votes[i].ContextValidate(ctx, formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("votes" + "." + strconv.Itoa(i))
+				} else if ce, ok := err.(*errors.CompositeError); ok {
+					return ce.ValidateName("votes" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *PostStampResponse) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *PostStampResponse) UnmarshalBinary(b []byte) error {
+	var res PostStampResponse
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
