# internal/types/spec_handlers.go
@@ -50,5 +50,6 @@ func (o *SwaggerSpec) initHandlerCache() {
 	o.Handlers["POST"]["/api/v1/auth/logout"] = true
 	o.Handlers["POST"]["/api/v1/auth/refresh"] = true
 	o.Handlers["POST"]["/api/v1/auth/register"] = true
+	o.Handlers["POST"]["/api/v1/stamp"] = true
 	o.Handlers["PUT"]["/api/v1/push/token"] = true
 }
