# internal/types/vote.go
@@ -1,0 +1,118 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package types
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// Vote vote
+//
+// swagger:model vote
+type Vote struct {
+
+	// If the vote agrees with the stamp
+	// Required: true
+	Approved *bool `json:"approved"`
+
+	// The id of the relation domain stamp
+	// Required: true
+	// Format: uuid4
+	DomainStampID *strfmt.UUID4 `json:"domainStampId"`
+
+	// Optional rating, only possible if the vote agrees
+	// Maximum: 9
+	// Minimum: 0
+	Rating *int64 `json:"rating,omitempty"`
+}
+
+// Validate validates this vote
+func (m *Vote) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateApproved(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateDomainStampID(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateRating(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *Vote) validateApproved(formats strfmt.Registry) error {
+
+	if err := validate.Required("approved", "body", m.Approved); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *Vote) validateDomainStampID(formats strfmt.Registry) error {
+
+	if err := validate.Required("domainStampId", "body", m.DomainStampID); err != nil {
+		return err
+	}
+
+	if err := validate.FormatOf("domainStampId", "body", "uuid4", m.DomainStampID.String(), formats); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *Vote) validateRating(formats strfmt.Registry) error {
+	if swag.IsZero(m.Rating) { // not required
+		return nil
+	}
+
+	if err := validate.MinimumInt("rating", "body", *m.Rating, 0, false); err != nil {
+		return err
+	}
+
+	if err := validate.MaximumInt("rating", "body", *m.Rating, 9, false); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// ContextValidate validates this vote based on context it is used
+func (m *Vote) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *Vote) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *Vote) UnmarshalBinary(b []byte) error {
+	var res Vote
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
